days left banner overlap, notif. time fix

--- a/src/app/shared/lib-card/lib-card.component.scss
+++ b/src/app/shared/lib-card/lib-card.component.scss
@@ -150,17 +150,21 @@ $red: #b22222;
         background:$orange;
     }
     label{
-        position:absolute;
-        top:100%;
-        margin-top:2px;
-        left:50%;
-        transform:translate(-50%,0);
-        width:100%;
-        text-align:center;
+        position: absolute;
+        bottom: 0;
+        margin: 0;
+        left: 50%;
+        padding: 5px;
+        transform: translate(-50%, 0);
+        width: 100%;
+        text-align: center;
+        background: rgba(215, 212, 212, 0.7);
+        backdrop-filter: blur(2px);
         b{
             &.over-info{
                 color:$red;
             }
+            letter-spacing:1px;
         }
     }
     img,
